<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_background"
    tools:context=".ShareAndDownloadActivity">

    <TextView
        android:id="@+id/upload_download_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_download"
        android:textColor="@color/Black"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/file_name_edittext_upload_download"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/upload_download_textview"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:hint="@string/task_name_upload_download" />

    <Button
        android:id="@+id/upload_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:textColor="@color/download"
        android:background="@color/upload"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/download_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download"
        android:background="@color/download"
        android:textColor="@color/upload"
        android:layout_above="@+id/upload_button"
        android:layout_alignEnd="@id/file_name_edittext_upload_download" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/successTextView"
        android:layout_below="@+id/file_name_edittext_upload_download"
        android:layout_alignEnd="@+id/file_name_edittext_upload_download" />
</RelativeLayout>